<resources>
    <string name="app_name">Github User</string>
    <string name="card_item_username">Username</string>
    <string name="card_item_name">Name</string>
    <string name="repostiory_followers_following">0</string>
    <string name="card_item_locations">locations</string>
    <string name="card_item_company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="iv_desc_avatar">iv_desc_avatar</string>

    <!--  resource  -->
    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>
    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>
    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>
    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>
    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>
    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>
    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>
    <string-array name="avatar">
        <item>https://i.ibb.co/V2Zv4py/user1.jpg</item>
        <item>https://i.ibb.co/ZJ0dW3S/user2.jpg</item>
        <item>https://i.ibb.co/n7jh3rS/user3.jpg</item>
        <item>https://i.ibb.co/dj6TV0H/user4.jpg</item>
        <item>https://i.ibb.co/gJC9VJZ/user5.jpg</item>
        <item>https://i.ibb.co/rGnz3FR/user6.jpg</item>
        <item>https://i.ibb.co/JryKCbc/user7.png</item>
        <item>https://i.ibb.co/f9RNqLy/user8.png</item>
        <item>https://i.ibb.co/q9zN3Qc/user9.jpg</item>
        <item>https://i.ibb.co/PWZRJ8q/user10.png</item>
    </string-array>

</resources>