<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    tools:context=".UserDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_avatar_receiver"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/iv_desc_avatar" />

        <TextView
            android:id="@+id/tv_name_receiver"
            style="@style/TextContent.Profile.Bold"
            android:text="@string/card_item_name"
            android:textColor="@color/text_color_blue_bold"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username_receiver"
            style="@style/TextContent.Profile"
            android:text="@string/card_item_username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_company_receiver"
            style="@style/TextContent.Profile.Small"
            android:text="@string/card_item_company"
            android:textColor="@color/text_color_location_company" />

        <TextView
            android:id="@+id/tv_locations_receiver"
            style="@style/TextContent.Profile.Small"
            android:text="@string/card_item_locations"
            android:textColor="@color/text_color_location_company" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repository"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/following"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tv_repositories"
            style="@style/TextContent.DataNumber"
            android:layout_weight="1"
            android:text="@string/repostiory_followers_following" />

        <TextView
            android:id="@+id/tv_followers"
            style="@style/TextContent.DataNumber"
            android:layout_weight="1"
            android:text="@string/repostiory_followers_following" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/TextContent.DataNumber"
            android:layout_weight="1"
            android:text="@string/repostiory_followers_following" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>